Change tests project
